Minor edit to markdown

--- a/00 Doc/DV_RProject2.html
+++ b/00 Doc/DV_RProject2.html
@@ -65,7 +65,7 @@ img {
 <h1>Elements Of Data Visualization: Project 2, Exoplanet Analysis</h1>
 <p><strong>By Alex Cortez, Adam Hernandex, and Alex Pearce</strong></p>
 <p><strong>GitHub</strong>: <a href="https://github.com/joseacortez91/DV_RProject2">https://github.com/joseacortez91/DV_RProject2</a></p>
-<p>This project deals with creating interesting graphs of exoplanet data from (Where ever this data is from), using packages like tidyr and dplyr, as well as ggplots2.</p>
+<p>This project deals with creating interesting graphs of exoplanet data from (<strong>source of the data</strong>), using packages like tidyr and dplyr, as well as ggplots2.</p>
 <div id="load-necessary-packages" class="section level2">
 <h2>Load necessary packages</h2>
 <pre class="r"><code>source(&quot;../01 Data/load_packages.R&quot;,echo=TRUE)</code></pre>
